styles.css
/* ... */
.l-justify-center {
  justify-content: center;
}

.l-justify-space-between {
  justify-content: space-between;
}

.l-justify-space-around {
  justify-content: space-around;
}

/* Align Items */
.l-align-start {
  align-items: flex-start;
}

.l-align-end {
  align-items: flex-end;
}

.l-align-center {
  align-items: center;
}

.l-align-baseline {
  align-items: baseline;
}

.l-align-stretch {
  align-items: stretch;
}

/* Flex Direction */
.l-flex-row {
  flex-direction: row;
}

.l-flex-row-reverse {
  flex-direction: row-reverse;
}

.l-flex-column {
  flex-direction: column;
}

.l-flex-column-reverse {
  flex-direction: column-reverse;
}

/* Grid Layout */
.l-grid {
  display: grid;
}

/* Grid Template Columns */
.l-grid-col-2 {
  grid-template-columns: repeat(2, 1fr);
}

.l-grid-col-3 {
  grid-template-columns: repeat(3, 1fr);
}

.l-grid-col-4 {
  grid-template-columns: repeat(4, 1fr);
}

/* Grid Template Rows */
.l-grid-rows-2 {
  grid-template-rows: repeat(2, 1fr);
}

.l-grid-rows-3 {
  grid-template-rows: repeat(3, 1fr);
}

.l-grid-rows-4 {
  grid-template-rows: repeat(4, 1fr);
}

/* Grid Auto Columns and Rows */
.l-grid-auto-col {
  grid-auto-columns: minmax(100px, auto);
}

.l-grid-auto-rows {
  grid-auto-rows: minmax(100px, auto);
}

/* Grid Gap */
.l-grid-gap-1 {
  gap: 1rem;
}

.l-grid-gap-2 {
  gap: 2rem;
}

.l-grid-gap-3 {
  gap: 3rem;
}

/* Grid Justify Content */
.l-grid-justify-start {
  justify-content: start;
}

.l-grid-justify-end {
  justify-content: end;
}

.l-grid-justify-center {
  justify-content: center;
}

/* Container Class */
.c-container-head {
  max-width: 100%;
}

.c-continer-sidenav {
  max-width: 30%;
}

.c-container-content {
  max-width: fit-content;
}

/***** Outback Nursery Site *****/

/* Topnav */
.topnavbar {
  position: fixed;
  top: 0;
  width: 100%;
  display: flex;
  justify-content: space-between;
  overflow: hidden;
  z-index: 1000;
}

.topnavbar__link--logo.active {
  color: var(--text-hover-100);
}

.topnavbar__link {
  text-decoration: none;
  padding: 14px 16px;
}

.topnavbar__links {
  display: none;
}

.topnavbar__link:hover {
  color: var(--text-hover-100);
}

/* Styles for the hamburger icon */
.hamburger {
  display: flex;
  cursor: pointer;
  padding: 15px;
}

.hamburger:hover {
  color: var(--text-hover-100);
}

/* Hero section */
.hero__section {
  position: relative;
  height: 650px;
  background: url("images/japanese-maple-tree.jpg") center/cover no-repeat;
  color: white;
  text-align: center;
  display: flex;
  align-items: center;
  justify-content: center;
}

/* Style for the overlay */
.c-overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.591);
}

/* Style for the hero content */
.hero__content {
  z-index: 1;
}

/* Style for the call-to-action button */
.cta__button {
  border: none;
  cursor: pointer;
  text-decoration: none;
  transition: background-color 0.3s ease;
}

/* Hover effect for the button */
.cta__button:hover {
  background-color: var(--clr-button-hover);
}

/* Scroll animation for announcement section */
.l-announcement {
  position: fixed; /* Change to fixed */
  top: 0; /* Position at the top */
  left: 0;
  width: 100%;
  overflow-x: hidden; /* Hide overflow to prevent scrollbar */
  white-space: nowrap; /* Prevent text wrapping */
  z-index: 1000; /* Ensure it's above other content */
}

.scroll__text {
  display: inline-block; /* Display text in a single line */
  padding: 0 20px; /* Add padding to the scrolling text */
  animation: scrollText 20s linear infinite; /* Apply the scrollText animation */
}

/* Define the animation */
@keyframes scrollText {
  0% {
    transform: translateX(0); /* Start position */
  }
  100% {
    transform: translateX(100%); /* End position (scroll to the left) */
  }
}

/* carousel style */
.carousel-container {
  display: flex;
  flex-direction: column;
  width: 100%;
  overflow: hidden;
  position: relative;
  overflow-x: hidden; /* Prevent horizontal scrollbar */
}
.carousel {
  display: flex;
}

.navigation {
  display: block; /* Show navigation buttons on desktop */
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  width: 100%;
  display: flex;
  justify-content: space-between;
}

.card {
  padding: 5px;
  scroll-snap-align: start;
  background-color: var(--clr-card); /* Use variable for card color */
  color: var(--clr-primary); /* Use variable for card text color */
}
.card img {
  width: 250px;
  height: 400px;
}

.navigation button {
  border: none;
  border-radius: 50%;
  width: 40px;
  height: 40px;
  font-size: 20px;
  cursor: pointer;
  transition: background-color 0.3s ease;
}

.navigation button:hover {
  background-color: var(
    --primary-bg-light
  ); /* Use variable for button hover background color */
}

.pagination {
  text-align: center;
  margin-top: 10px;
}

.dot {
  height: 10px;
  width: 10px;
  background-color: var(
    --clr-secondary
  ); /* Use variable for dot background color */
  border-radius: 50%;
  display: inline-block;
  margin: 0 5px;
  cursor: pointer;
}

.dot.active {
  background-color: var(
    --clr-light
  ); /* Use variable for active dot background color */
}

.carousel-button {
  border: none;
  cursor: pointer;
  text-decoration: none;
  transition: background-color 0.3s ease;
  width: fit-content; /* Make button width fit its content */
  margin: auto; /* Center the button horizontally */
}

/* Card container styles */
.category__cards-container {
  overflow-x: auto; /* Enable horizontal scrollbar */
  white-space: nowrap; /* Prevent cards from wrapping */
  -webkit-overflow-scrolling: touch; /* Smooth scrolling on iOS */
  padding-bottom: 15px; /* Add padding to create gap */
}

/* Card styles */
.c-card {
  flex: 0 0 auto;
  margin-right: 15px; /* Adjust as needed */
  display: inline-block;
}
/* ... */

